* condition
  - add more tests
* have local library be dependent on HAVE_MULTI_THREAD_SUPPORT
* add macros for locking ? or have fallback dummy locks ?
* add try grab function
  - lock ?
  - read/write
* reimplement repeating thread as a queued thread?
* add glib support

Tests
* clean up stdout/stderr
* add tests of libcthreads_queue_push_sorted
* add tests of libcthreads_queue_push_sorted

20160411
* worked on tests

20160404
* added value free callback function to queue free

20160403
* fixed values array not being freed after join of thread pool

20160402
* fixes for race in of thread pool helper threads

20160401
* worked on queue sorted push
* worked on thread pool sorted push

20160105
* 2016 update

20151221
* applied updates

20150904
* updated common

20150406
* code clean up

20150104
* corrections in include header
* update man page: libcthreads.3

20150101
* 2015 update

20141229
* updated dpkg files

20141014
* changes for deployment

20141010
* worked on utility scripts

20141001
* worked on stand-alone libcstring support

20140915
* changes for project site move

20140730
* updated dpkg files

20140505
* fixes to build static library with mingw and cygwin

20140105
* updated dependencies
* 2014 update
* updated man pages

20131017
* updated dependencies

20131003
* Bug fixes for RW lock XP version, with thanks to Phillip Hellewell

20130723
* bug fixes for Vista build

20130609
* fix in .pc.in file

20130509
* worked on thread pool

20130508
* worked on queue
* worked on thread pool

20130507
* worked on condition
* worked on queue
* reintroduced lock, need to distinguish between critical section
  and mutex on WINAPI for condition
* removed INSTALL from git version
* updated msvscpp files
* moved repeating thread into thread pool

20130506
* worked on condition
* worked on repeating thread
* removed lock in favor of mutex
* worked on queue

20130505
* worked on thread
* worked on thread attributes
* worked on thread pool
* worked on mutex