@@ -27,9 +27,9 @@
 
 #include <stdio.h>
 
-#include "cthreads_test_libcthreads.h"
 #include "cthreads_test_libcerror.h"
 #include "cthreads_test_libcstring.h"
+#include "cthreads_test_libcthreads.h"
 #include "cthreads_test_unused.h"
 
 /* The thread callback function
